[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/background.png" type="Texture" id=1]
[ext_resource path="res://scenes/Panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/World.gd" type="Script" id=6]
[ext_resource path="res://assets/music/Chip Bit Danger.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/music/Random Battle.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/SceneTransitionRect.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.6517, 29.7699 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_color = Color( 0.956863, 0.807843, 0.403922, 1 )
font_data = ExtResource( 4 )

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.05945
margin_right = 718.941
margin_bottom = 720.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" parent="." instance=ExtResource( 2 )]

[node name="Position2D1" type="Position2D" parent="."]
position = Vector2( 75.7662, -12.3471 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 206.533, -12.3471 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 351.331, -11.7859 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 503.533, -10.9714 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 638.076, -10.1041 )

[node name="Turrets" type="Node" parent="."]

[node name="Turret1" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 70, 295 )

[node name="Turret2" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 213, 295 )
turretNumber = 1

[node name="Turret3" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 355, 295 )
turretNumber = 2

[node name="Turret4" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 500, 295 )
turretNumber = 3

[node name="Turret5" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 645, 295 )
turretNumber = 4

[node name="collisions" type="Node" parent="."]

[node name="crossing line" type="Area2D" parent="collisions"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/crossing line"]
position = Vector2( 359.109, 297.473 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/StaticBody2D"]
position = Vector2( 19.2383, 377.858 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/StaticBody2D2"]
position = Vector2( 699.046, 377.151 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 282.936, 361.296 )
z_index = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="IncreaseDifficulty" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="label" type="Label" parent="."]
margin_left = 37.7549
margin_top = 594.139
margin_right = 229.755
margin_bottom = 690.139
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.164706, 0.0784314, 0.137255, 1 )
text = "Score:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 37.7549
margin_top = 632.009
margin_right = 229.755
margin_bottom = 728.009
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.164706, 0.0784314, 0.137255, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -18.0

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -18.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SceneTransitionRect" parent="CanvasLayer" instance=ExtResource( 9 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="body_entered" from="collisions/crossing line" to="." method="_on_crossing_line_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="IncreaseDifficulty" to="." method="_on_IncreaseDifficulty_timeout"]
[connection signal="finished" from="music1" to="." method="_on_music1_finished"]
[connection signal="finished" from="music2" to="." method="_on_music2_finished"]
